--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.15.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
