--- a/package.json
+++ b/package.json
@@ -9,21 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@caldwell619/react-kanban": "^0.0.11",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@faker-js/faker": "^9.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hello-pangea/dnd": "^17.0.0",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@syncfusion/ej2-react-kanban": "^28.1.33",
     "@vis.gl/react-google-maps": "^1.4.2",
     "geojson": "^0.5.0",
+    "idb-keyval": "^6.2.1",
     "next": "15.1.0",
+    "random-rgba": "^1.0.4",
     "react": "^19.0.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-trello": "^2.2.11",
     "recharts": "^2.15.0",
     "uuid": "^11.0.3",
     "zustand": "^5.0.2"
